--- a/SignUp/Base.lproj/Main.storyboard
+++ b/SignUp/Base.lproj/Main.storyboard
@@ -160,7 +160,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="gN3-Jy-3Xj"/>
                     <connections>
+                        <outlet property="cancelButton" destination="3F6-fk-6lt" id="nmr-EF-oyb"/>
                         <outlet property="nextButton" destination="nQG-pG-NB4" id="9nK-t1-TIv"/>
+                        <outlet property="photoView" destination="EJa-Cf-TQM" id="zHc-C7-3kH"/>
                         <outlet property="textField_CheckPassword" destination="VpA-ib-ddt" id="yRF-MC-Rjn"/>
                         <outlet property="textField_ID" destination="kQZ-JF-x6z" id="djk-za-OvW"/>
                         <outlet property="textField_Password" destination="thR-UP-Hzw" id="kFY-lb-Ert"/>
@@ -228,14 +230,14 @@
                                         <buttonConfiguration key="configuration" style="plain" title="취소">
                                             <color key="baseForegroundColor" systemColor="systemRedColor"/>
                                         </buttonConfiguration>
-                                        <connections>
-                                            <action selector="popToPrev" destination="OoY-cb-0fR" eventType="touchUpInside" id="hXb-uk-RIh"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TjD-rF-IjG">
                                         <rect key="frame" x="78.5" y="0.0" width="48.5" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="이전"/>
+                                        <connections>
+                                            <action selector="popToPrev" destination="OoY-cb-0fR" eventType="touchUpInside" id="dAE-XC-bhE"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h8a-dk-ce7">
                                         <rect key="frame" x="157" y="0.0" width="48.5" height="31"/>
