--- a/SignUp/Base.lproj/Main.storyboard
+++ b/SignUp/Base.lproj/Main.storyboard
@@ -64,6 +64,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eZg-jL-jJf"/>
+                    <connections>
+                        <outlet property="textField_id" destination="AvV-v7-Sjv" id="ypI-bB-B9K"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -134,7 +137,7 @@
                                             <color key="baseForegroundColor" systemColor="systemRedColor"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="popToPrev" destination="zqC-gg-jGo" eventType="touchUpInside" id="m1M-3p-8DW"/>
+                                            <action selector="cancelSignUp" destination="zqC-gg-jGo" eventType="touchUpInside" id="DLv-Lg-mMF"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nQG-pG-NB4">
@@ -166,6 +169,7 @@
                         <outlet property="textField_CheckPassword" destination="VpA-ib-ddt" id="yRF-MC-Rjn"/>
                         <outlet property="textField_ID" destination="kQZ-JF-x6z" id="djk-za-OvW"/>
                         <outlet property="textField_Password" destination="thR-UP-Hzw" id="kFY-lb-Ert"/>
+                        <outlet property="textView_aboutMe" destination="IcT-ta-w26" id="fBd-HR-iaB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5P6-RA-6UK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -192,7 +196,7 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pfd-Aw-VUr">
                                         <rect key="frame" x="0.0" y="20.5" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" textContentType="tel"/>
                                     </textField>
                                 </subviews>
                             </stackView>
@@ -208,7 +212,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8Y-0V-UES">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8Y-0V-UES">
                                                 <rect key="frame" x="203" y="0.0" width="171" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
@@ -230,13 +234,16 @@
                                         <buttonConfiguration key="configuration" style="plain" title="취소">
                                             <color key="baseForegroundColor" systemColor="systemRedColor"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="cancelSignUp" destination="OoY-cb-0fR" eventType="touchUpInside" id="SD1-fV-EyN"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TjD-rF-IjG">
                                         <rect key="frame" x="78.5" y="0.0" width="48.5" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="이전"/>
                                         <connections>
-                                            <action selector="popToPrev" destination="OoY-cb-0fR" eventType="touchUpInside" id="dAE-XC-bhE"/>
+                                            <action selector="popToPrev" destination="OoY-cb-0fR" eventType="touchUpInside" id="GXS-J4-9Wt"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h8a-dk-ce7">
@@ -263,6 +270,12 @@
                             <constraint firstItem="QZw-7N-OnF" firstAttribute="top" secondItem="Ghi-AR-Fid" secondAttribute="top" constant="20" id="ntG-0Q-DpH"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="birthdayDisplay" destination="R8Y-0V-UES" id="VGc-Vx-Ape"/>
+                        <outlet property="birthdayPicker" destination="lD3-h7-6Y5" id="ga2-8Q-eVt"/>
+                        <outlet property="joinButton" destination="h8a-dk-ce7" id="68M-yz-w4o"/>
+                        <outlet property="phoneNumberField" destination="pfd-Aw-VUr" id="3Re-XT-Oai"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CPR-7Z-g2c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
